--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ a {
 }
 
 #overlay {
+    display:none;
     width: 100%;
     height: 2000px;
     position: absolute;
@@ -28,7 +29,7 @@ a {
         float: left;
         width: 20%;
         background-color: rgba(0,0,0,0.9);
-        color: white;
+        color: #CCC;
         font-size: 16px;
         font-family: "Helvetic Neue", Helvetica, Arial, sans-serif;
     }
@@ -67,10 +68,9 @@ a {
     background: #000;
 }
 
-#github {
-    position: fixed;
-    bottom: 10px;
-    right: 15px;
+#github a {
+    display:block;
+    margin: 50px auto 0;
     background-color: rgba(255,255,255,0.4);
     border-radius: 3px;
     height: 31px;
