--- a/css/style.css
+++ b/css/style.css
@@ -79,15 +79,19 @@ a {
 }
 
 #menu {
+    font-size: 12px;
+    line-height: 11px;
     display:none;
     border-radius: 5px;
-    padding: 15px 10px 5px;
+    padding: 0 10px;
     width: 300px;
     color: white;
     position: absolute;
     left: 1px;
     top: 1px;
     background-color: rgba(255, 55, 255, 0.2);
+    max-height: 94%;
+    overflow-y: auto;
 }
 
 .left { float: left; }
